# DSTP

./: .gitignore  .gitmsg  Boas_Vindas.dstp.json  CLAUDE.md  Chat_TP.dstp.json  IDEAS.md  Protecao_Novato.dstp.json  README.md  docker-compose.yml  modinfo.lua  modmain.lua  package.json
.github/workflows/: docker-panel.yml  relay-release.yml
DST_MOD/: .gitignore  CHANGELOG.md  build-mod.sh  modicon.tex  modinfo.lua  modmain.lua
DST_MOD/scripts/components/: dstp_landclaims.lua
DST_MOD/scripts/dstp/: chat.lua  client.lua  collectors.lua  commands.lua  core.lua  (+8 more)
DST_MOD/specs/: README.md  data-catalog.md  dst-client-constraints.md  dynamic-content-feasibility.md  dynamic-data-bindings.md  entity-control-catalog.md  entity-events-catalog.md  http-prefab-transport.md  mod-audit-2026-06.md  ui-canvas-editor-plan.md  ui-css-support.md  ui-element-model.md  ui-system.md
deploy/: dstp-stack.yml
docs/: AUTOMATION.md  WORKERS.md
examples/flows/: Auto_Respawn.dstp.json
frontend/: .env.example  README.md  drizzle.config.ts  package.json  tsconfig.json  vite.config.ts  vitest.client.config.ts  vitest.config.ts
frontend/LLMD/: INDEX.md
frontend/scripts/: build-dist.ts  bun-test-files.ts  gen-action-modules.mjs  gen-commands.cjs  gen-shop-full.cjs  replay.ts  run-bun-tests.ts
frontend/test-stubs/: bun-sqlite.ts
relay/: Cargo.toml  README.md  dstp-relay.config.example.json  package.json  relay.ts
relay/src/: main.rs
scripts/dstp/: client.lua  ui_widgets.lua
specs/: README.md  dst-client-constraints.md  dynamic-data-bindings.md  ui-by-nodes.md  ui-system.md
(+750 files in other folders)
