[package]
name = "dstp-relay"
version = "1.0.0"
edition = "2021"
description = "Tiny HTTP proxy bridging the DST mod to a remote DSTP backend"

[[bin]]
name = "dstp-relay"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "time", "sync", "signal"] }
hyper = { version = "1", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio", "server-graceful"] }
http-body-util = "0.1"
bytes = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-native-roots"] }
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2"

# Aggressive size optimization: ~400KB-1MB binary vs Bun's 116MB.
[profile.release]
opt-level = "z"     # optimize for size
lto = true          # link-time optimization
codegen-units = 1   # better optimization, slower compile
panic = "abort"     # no unwinding tables
strip = true        # strip symbols
